# Oscilloscope

./: .code-workspace  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  aph.filtergraph  readme..md  redme.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-and-release.yml  ci-release.yml  ci-snapshot.yml  cmake-multi-platform.yml
cmake/: get_cpm.cmake
configuration/: TreeAdapter.h
dsp/: Dsp.h
dsp/data/: FifoAudioBuffer.h  RingBufferInterface.h
dsp/effect/: DisfluxProcessor.h  Effect.h
dsp/filter/: Filter.h
dsp/synth/: AnalogOscillator.h  AnalogWaveform.h  Synth.h
gui/component/: AbstractSliderComponent.h  Component.h  OscillatorDisplayComponent.h  SettingsEditorComponent.h
gui/display/: Display.h  OscilloscopeDisplay.h
gui/panel/: AnalogGainPanel.h  AnalogOscillatorPanel.h  AnalogPitchPanel.h  HeretikFeedbackPanel.h  ModernGainPanel.h  ModernOscillatorPanel.h  ModernPitchPanel.h  OscSendPanel.h  OscilloscopePanel.h  PitchPanel.h  SettingsPanel.h  VoicingPanel.h
gui/preset/: FolderPanel.h  PresetManager.h  PresetPanel.h
gui/widget/: AbstractButton.h  BorderButton.h  CallbackButton.h  MinMaxRenderer.h  OscilloscopeRenderer.h  PathStrokeRenderer.h  RotarySlider.h  TextEditor.h  TriangleButton.h  ValueEditorList.h  Widget.h
gui/window/: Alerts.h  Compositor.h  Layout.h  Popover.h  Window.h
model/: AhdEnvelopeParameters.h  DistortionParameters.h  VoiceParameters.h
pkg/arch/git/: PKGBUILD
pkg/arch/release/: PKGBUILD
pkg/fedora/: snapshot.spec
pkg/mac/: distribution.xml
pkg/ubuntu/: control
pkg/windows/: Setup.iss
scripts/: build.ps1  count_loc.sh  linux_install.sh  locc.ps1
src/: CMakeLists.txt
src/app/: AudioSettings.h  ParameterLayout.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/dmt/: DmtHeader.h  README.md
src/dmt/app/: AbstractPluginEditor.h  AbstractPluginProcessor.h  App.h
src/dmt/configuration/: Configuration.h  Container.h  Options.h  Properties.h
src/dmt/dsp/data/: Data.h  RingAudioBuffer.h
src/dmt/dsp/effect/: Distortion.h  HeretikProcessor.h  LowpassProcessor.h
src/dmt/dsp/envelope/: AdhEnvelope.h  Envelope.h
src/dmt/dsp/synth/: SynthSound.h  SynthVoice.h
src/dmt/gui/: Gui.h
src/dmt/gui/component/: LinearSliderComponent.h  RotarySliderComponent.h
src/dmt/gui/display/: AbstractDisplay.h  DisfluxDisplay.h  SettingsEditorDisplay.h
src/dmt/gui/panel/: AbstractPanel.h  Carousel.h  DisfluxPanel.h  GainPanel.h  HeretikDrivePanel.h  HeretikPanel.h  OscillatorPanel.h  OscilloscopePanel.h  Panel.h  WaveformDistortionPanel.h
src/dmt/gui/preset/: FolderManager.h
src/dmt/gui/widget/: Graph.h  Label.h  LinearSlider.h  Oscilloscope.h  Shadow.h  ToggleButton.h  ValueCategoryList.h  ValueEditor.h
src/dmt/gui/window/: Header.h  Tooltip.h
src/dmt/model/: DisfluxParameters.h  GlobalParameters.h  HeretikParameters.h  Model.h  OscSendParameterGroup.h  OscillatorParameters.h  OscilloscopeParameters.h  ParameterLayout.h  WaveformParameters.h
src/dmt/scripts/: push_subtree.sh
src/dmt/theme/: StyleLoader.h  Theme.h
src/dmt/utility/: Unit.h  Utility.h
src/dmt/version/: Info.h  Networking.h  Version.h
src/dsp/data/: RingBuffer.h
src/dsp/processor/: OscilloscopeProcessor.h
src/gui/: OscilloscopePanel.h
src/utility/: RingBuffer.h
test/: rdp_test.py
tests/: CMakeLists.txt  RingBufferTest.cpp
theme/: StyleSheet.h
utility/: Fonts.h  HostContextMenu.h  Icon.h  Math.h  RepaintTimer.h  Scaleable.h  Settings.h
version/: Manager.h  Utility.h
